Return unclamped width for BrowserActionsContainer

This method is used from ToolbarActionsBar to see if
BrowserActionsContainer is larger than all visible actions (and needs
to be downsized).

Per a recent change this was clamping to the ToolbarActionsBar max size
which would make ToolbarActionsBar think it's already the appropriate
full size and not not animate it to the smaller new full size.

Bug: chromium:831977
Change-Id: I1a8b3a83504a4f0afcf6e72146bef0e85ecc4fd9
Reviewed-on: https://chromium-review.googlesource.com/1011343
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Peter Boström <pbos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550504}
Former-commit-id: e8b35e25301e4b7e4e48c5101e156a6cd5c36013